update styles to fix readability of links

--- a/website/src/css/customTheme.css
+++ b/website/src/css/customTheme.css
@@ -1,9 +1,14 @@
 :root{
-  --ifm-color-primary-lightest: #38414D;
-  --ifm-color-primary-lighter: #313A44;
-  --ifm-color-primary-light: #2F3741;
-  --ifm-color-primary: #2b323b;
-  --ifm-color-primary-dark: #272D35;
-  --ifm-color-primary-darker: #252B32;
-  --ifm-color-primary-darkest: #1E2329;
+  --brand-color-primary: #2b323b;
+  --brand-color-accent: #ef0092;
+
+  --ifm-color-primary: var(--brand-color-primary);
+  --ifm-color-primary-dark: #272d35;
+  --ifm-color-primary-darker: #252b32;
+  --ifm-color-primary-darkest: #1e2329;
+  --ifm-color-primary-light: #2f3741;
+  --ifm-color-primary-lighter: #313a44;
+  --ifm-color-primary-lightest: #38414d;
+
+  --ifm-link-color: var(--brand-color-accent);
 }
